samples/_failures_safe/1761537250_c8315e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49ebfb60.c: In function ‘main’:
./samples/SAFE/__tmp_49ebfb60.c:127:5: error: expected declaration or statement at end of input
  127 |     }
      |     ^
